--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <version>2.2.2.RELEASE</version>
   </parent>
 
-  <groupId>org.example</groupId>
+  <groupId>org.pnld</groupId>
   <artifactId>pnld</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
