Add conection local database with mybatis

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,4 +21,9 @@ csv.headers.test-pc-3=
 csv.headers.salida=
 csv.headers.satis=
 
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/pnld
+spring.datasource.username=react
+spring.datasource.password=react-PNLD-21
+
 
