--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ copy.path.files=/Users/macbook/Downloads/pnld-upload-files/
 
 csv.headers.teacher-roster=firstname,prefname,lastname,email,schoolname,schoolcity,grade,coursename,studentsincourse,highestunitstudents,onlinecsfcourse,onlinecsfhighestunit,index
 csv.headers.teacher-opt-in=firstname,prefname,lastname,email,altemail,gender,schoolname,schoolcity,subjectstaught,agetaught,csrescources,roboticsrescources,workshoporganizer,workshopdate,workshopfacilitator,index
-csv.headers.student-level=teachername,teacheremail,schoolname,schoolcity,course,sectionid,organizer,students,studentswithprojects,index,avgcoursecompletedmaxcoursecompleted,medianlevelsattempted,projects
+csv.headers.student-level=teachername,teacheremail,schoolname,schoolcity,course,sectionid,organizer,students,studentswithprojects,index,avgcoursecompleted,maxcoursecompleted,medianlevelsattempted,projects
 csv.headers.signin-per-course=weekofsigninat,coursename,distinctcountofuseridcsfstarted
 csv.headers.sign-ins=weekofsigninat,distinctcountofuserid,differenceindistinctcountofuserid
 csv.headers.diagnostico=
