Simple auth in memory
Falta conectarlo con base de datos pg

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,7 @@ csv.headers.salida=
 csv.headers.satis=
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/pnld
+spring.datasource.url=jdbc:postgresql://0.0.0.0:5432/pnld
 spring.datasource.username=react
 spring.datasource.password=react-PNLD-21
 
