--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,8 @@ spring.datasource.username=react
 spring.datasource.password=react-PNLD-21
 
 
+# configuracion auth con LDAP
+spring.ldap.embedded.port=8389
+spring.ldap.embedded.ldif=classpath:test-server.ldif
+spring.ldap.embedded.base-dn=dc=springframework,dc=org
+
