--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,4 @@ spring.ldap.embedded.port=8389
 spring.ldap.embedded.ldif=classpath:test-server.ldif
 spring.ldap.embedded.base-dn=dc=springframework,dc=org
 
+cron.process-loadscheduled=0 0 0 * * ?
