--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,6 @@ spring.ldap.embedded.ldif=classpath:test-server.ldif
 spring.ldap.embedded.base-dn=dc=springframework,dc=org
 
 cron.process-loadscheduled=0 0 0 * * ?
+
+provider-url=ldap://localhost:8389/dc=springframework,dc=org
+ldap-factory=com.sun.jndi.ldap.LdapCtxFactory
