--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,3 +35,5 @@ cron.process-loadscheduled=0 0 0 * * ?
 
 provider-url=ldap://localhost:8389/dc=springframework,dc=org
 ldap-factory=com.sun.jndi.ldap.LdapCtxFactory
+
+format.date.training.test=d/MMMM/yyyy H:m
