Add swagger config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,15 @@ spring.freemarker.suffix=.ftlh
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
+app.name=spring boot application
+app.api.title=Spring Boot APIs
+app.api.version=1.0.0
+app.api.description=Spring Boot APIs description
+app.api.base-package=com.react.pnld.controller
+app.api.contact-name=apisupportgroup
+app.api.contact-email=apisupportgroup@abc.com
+app.api.swagger.enable=true
+
 copy.path.files=/etc/sites/pnld/upload-files/
 
 csv.headers.teacher-roster=firstname,prefname,lastname,email,schoolname,schoolcity,grade,coursename,studentsincourse,highestunitstudents,onlinecsfcourse,onlinecsfhighestunit,index
